# convex_collisions_ros

./: README.md
convex_collision_msgs/: CMakeLists.txt  package.xml
convex_collision_msgs/msg/: ConvexHull.msg
convex_collision_msgs/srv/: CheckCollision.srv
convex_collision_ros/: CMakeLists.txt  package.xml
convex_collision_ros/config/: awing_frames.yaml  config.rviz
convex_collision_ros/launch/: demo.launch  denavit_hartenberg_demo.launch
convex_collision_ros/meshes/: awing.mtl
convex_collision_ros/scripts/: collision_manager.py  demo_node.py  denavit_hartenberg_demo_node.py
