<?xml version="1.0"?>
<package format="2">
    <name>convex_collision_msgs</name>
    <version>0.0.0</version>
    <description>Messages for the convex_collision_ros package</description>
    <maintainer email="cranston.daniel@gmail.com">Daniel</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>geometry_msgs</depend>
    <exec_depend>message_runtime</exec_depend>
</package>